<resources>
    <string name="app_name">DbstarLauncher</string>
    <string name="hotline">客服电话: 4000&#8211;300&#8211;888</string>
    <string name="organization">《中国电力报》：国电集团部署2012年基建工作</string>
    <string name="desc"></string>
    <string name="GDVideoView_error_text_invalid_progressive_playback">格式不对</string>
    <string name="GDVideoView_error_text_unknown">未知错误</string>
    <string name="GDVideoView_error_title">错误</string>
    <string name="GDVideoView_error_button">关闭</string>
    <string name="VideoView_error_text_invalid_progressive_playback">无法渐进播放</string>
    <string name="VideoView_error_text_unknown">未知错误</string>
    <string name="VideoView_error_title">错误</string>
    <string name="VideoView_error_button">确定</string>
    <string name="loading_text">正在加载数据，请等待&#8230;</string>
    <string name="celander_text_nongli">农历</string>
    <string name="property_title">名字</string>
    <string name="property_director">导演</string>
    <string name="property_actors">主演</string>
    <string name="property_type">类型</string>
    <string name="property_year">年代</string>
    <string name="property_region">制片国家/地区</string>
    <string name="property_rate">推荐指数</string>
    <string name="property_episodes">集数</string>
    <string name="property_semicolon">:</string>
    <string name="property_space">&#160;</string>
    <string name="text_di">第</string>
    <string name="text_ye">页</string>
    <string name="text_ji">集</string>
    <string name="text_tiao">条</string>
    <string name="text_gong">共</string>
    <string name="text_slash">/</string>
    <string name="warning_text">警告</string>
    <string name="conformation_text">确认</string>
    <string name="tv_view_description_header">剧情简介:</string>
    <string name="inputview_title">输入</string>
    <string name="ch_year">年</string>
    <string name="ch_month">月</string>
    <string name="ch_day">日</string>
    <string name="ch_hour">小时</string>
    <string name="product_info">产品信息</string>
    <string name="disk_info">硬盘信息</string>
    <string name="disk_file_info">磁盘信息</string>
    <string name="disk_totalsize">硬盘总容量:&#160;</string>
    <string name="disk_file_totalsize">磁盘总容量:&#160;</string>
    <string name="disk_usedsize">占用空间:&#160;</string>
    <string name="disk_spacesize">剩余空间:&#160;</string>
    <string name="deviceinfo_device_serialnumber">终端序列号:&#160;</string>
    <string name="deviceinfo_hardware_type">硬件型号:&#160;</string>
    <string name="deviceinfo_hardware_version">硬件版本:&#160;</string>
    <string name="deviceinfo_software_version">软件版本:&#160;</string>
    <string name="deviceinfo_loader_version">Loader版本:&#160;</string>
    <string name="deviceinfo_mac_address">Mac地址:&#160;</string>
	<string name="upgrade_count">升级次数:&#160;</string>
    <string name="systemsettings_receivestatus">接收状态</string>
    <string name="systemsettings_diskspace">磁盘管理</string>
    <string name="systemsettings_advanced">高级设置</string>
    <string name="systemsettings_filebrowser">文件浏览</string>
    <string name="diskmanagement_disksize">磁盘空间</string>
    <string name="diskmanagement_usedspace">占用空间</string>
    <string name="diskmanagement_emptyspace">剩余空间</string>
    <string name="diskmanagement_gaurdspace">预警空间</string>
    <string name="receivestatus_filename">文件名</string>
    <string name="receivestatus_downloadprogress">下载进度</string>
    <string name="receivestatus_status">接收状态</string>
    <string name="receivestatus_filesize">文件大小</string>
    <string name="receivestatus_downloadpercent">百分比</string>
    <string name="receivestatus_downloadspeed">下载速度</string>
    <string name="receivestatus_diskspace">剩余空间</string>
    <string name="receivestatus_status_waitting">等待</string>
    <string name="receivestatus_status_downloading">正在下载</string>
    <string name="receivestatus_status_finished">下载完成</string>
    <string name="receivestatus_status_failed">下载失败</string>
    <string name="receivestatus_status_hassignal">信号正常</string>
    <string name="receivestatus_status_nosignal">无信号</string>
    <string name="checher_receive">接收</string>
    <string name="checher_not_receive">不接收</string>
    <string name="ok_key">OK</string>
    <string name="checher_switch_receive_status">切换接收状态</string>
    <string name="back_to_home_and_save">返回自动保存</string>
    <string name="back_to_home">返回首页</string>
    <string name="button_text_ok">确定</string>
    <string name="button_text_cancel">取消</string>
    <string name="dialog_upgrade_title">请注意！</string>
    <string name="dialog_upgrade_notes">系统检测到新的版本，按确认键开始升级，按取消键取消升级。</string>
    <string name="popup_forceupgrade_notes">系统检测到新的版本，5秒后自动重启开始升级！</string>
    <string name="popup_upgrade_emphasized_message">在升级过程中请不要断电或进行其它操作，以保证系统升级正常完成！</string>
    <string name="error_title">错误</string>
    <string name="file_notexist">文件不存在!</string>
    <string name="smartcard_status_title">智能卡</string>
    <string name="smartcard_status_in">智能卡已经插入！</string>
    <string name="smartcard_status_out">智能卡已拔出</string>
    <string name="smartcard_status_invlid">智能卡无效</string>
    <string name="smartcard_info">智能卡信息</string>
    <string name="version_info">版本信息</string>
    <string name="authorization_manage">授权管理</string>
    <string name="mailbox">邮件</string>
    <string name="smartcard_number">智能卡号:&#160;</string>
    <string name="smartcard_state">智能卡状态:&#160;</string>
    <string name="smartcard_eigenvalue">特征值:&#160;</string>
    <string name="smartcard_authorization">授权信息:&#160;</string>
    <string name="operator_id">运营商ID</string>
    <string name="product_id">产品ID</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="limit_count">限量</string>
    <string name="content_id">内容ID</string>
    <string name="ca_edition">CA版本:</string>
    <string name="drm_edition">DRM版本:</string>
    <string name="import_ca">导入授权</string>
    <string name="export_ca">导出授权</string>
    <string name="smarcard_state_not_in">无智能卡，请插入智能卡!</string>
    <string name="smarcard_state_invalid">智能卡无效!</string>
    <string name="smarcard_state_normal">正常.</string>
    <string name="alert_title">提示</string>
    <string name="ca_message_no_entitle">没有授权文件</string>
    <string name="ca_message_no_device">系统错误</string>
    <string name="ca_message_no_space">系统错误：空间不足</string>
    <string name="ca_message_export_finished">导出成功</string>
    <string name="ca_message_import_failed">系统错误</string>
    <string name="ca_message_import_finished">导入成功</string>
    <string name="email_id">ID</string>
    <string name="email_date">日期</string>
    <string name="email_flag">阅读标记</string>
    <string name="email_title">标题</string>
    <string name="email_flag_notread">未阅读</string>
    <string name="email_flag_read">已阅读</string>
    <string name="email_newmail">有新邮件</string>
    <string name="context_view_mypower_title">我的用电</string>
    <string name="mypower_monthpowerusage">本月可控电器电量:&#160;</string>
    <string name="mypower_monthpowercost">本月可控电器花费:&#160;</string>
    <string name="mypower_yearpowerusage">本年可控电器电量:&#160;</string>
    <string name="mypower_yearpowercost">本年可控电器花费:&#160;</string>
    <string name="mypower_monthpowerusage2">本月用电量:&#160;</string>
    <string name="mypower_monthpowercost2">本月用电费:&#160;</string>
    <string name="mypower_yearpowerusage2">本年用电量:&#160;</string>
    <string name="mypower_yearpowercost2">本年用电费:&#160;</string>
    <string name="string_degree">度</string>
    <string name="string_yuan">元</string>
    <string name="str_degree">度</string>
    <string name="str_yuan">元</string>
    <string name="mypower_text_yearpowercost">本年用电花费</string>
    <string name="mypower_text_yearpoweramount">本年用电量</string>
    <string name="mypower_text_monthpowercost">本月用电花费</string>
    <string name="mypower_text_monthpoweramount">本月用电量</string>
    <string name="mypower_text_target">已达到你设定目标的</string>
    <string name="mypower_text_smartsocket_data">智能插座数据</string>
    <string name="mypower_text_devicepowercost">所控电器用电费用</string>
    <string name="mypower_text_devicepoweramount">所控电器用电量</string>
    <string name="mypower_text_powerprice">元/度</string>
    <string name="mypower_text_target_unit">度/月</string>
    <string name="mypower_text_brackets_yuan">(元)</string>
    <string name="mypower_text_brackets_month">(月)</string>
    <string name="load_data_is_null">没有数据</string>
    <string name="this_is_the_first_page">已经是第一页</string>
    <string name="this_is_the_last_page">已经是最后一页</string>
    <string name="powerprice_type_single">普通电价 </string>
    <string name="powerprice_type_timing">分时电价</string>
    <string name="mypower_text_alldevicepoweramount">全部可控电器总用电量</string>
    <string name="test_jiatingnengxiao">家庭能效</string>
    <string name="test_dqwd_sjcx">用电跟踪</string>
    <string name="test_power_trend">用电趋势</string>
    <string name="test_power_tips">节能贴士</string>
     <string name="test_power_smart_home_my_equ">我的电器</string>
     <string name="test_power_smart_home_model">一键控制</string>
      <string name="test_power_smart_timed_task">定时任务</string>
    <string name="power_constitue_electrical">电器维度</string>
    <string name="power_constitue_step">阶梯维度</string>
    <string name="power_constitue_timing">峰谷平维度</string>
    <string name="power_constitue_color_example">图例</string>
    <string name="power_constitue_power_data_type_step">用电阶梯</string>
    <string name="power_constitue_power_data_type_ele">电器名称</string>
    <string name="power_constitue_power_data_type_period">用电时段</string>
    <string name="power_constitue_count">电量（度）</string>
    <string name="power_constitue_count_percent">电量占比</string>
    <string name="str_day">日期</string>
    <string name="family_text_electrical_change">电器选择:</string>
    <string name="family_text_all_electrical">全部可控电器 </string>
    <string name="family_text_all_count">家庭总用电量 </string>
    <string name="family_text_deleted_electrical">已删电器 </string>
    <string name="family_text_power_track_title">全部可控电器用电量 </string>
    <string name="family_text_histogram">柱状图</string>
    <string name="family_text_polyline_chart">折线图</string>
    <string name="family_text_used_power_count">用电量:</string>
    <string name="family_text_total_used_power_count">总用电量:</string>
    <string name="family_text_power_count">电量:</string>
    <string name="family_text_time_range">时间范围:</string>
    <string name="family_text_power_trend_titile">用电趋势-</string>
    <string name="family_text_tongbi">同比</string>
    <string name="family_text_huanbi">环比</string>
    <string name="family_text_huanbitu">环比图</string>
    <string name="family_text_tongbitu">同比图</string>
    <string name="family_text_half_year">最近半年</string>
    <string name="family_text_one_year">最近一年</string>
    <string name="family_text_two_year">最近两年</string>
     <string name="family_text_jin">今</string>
     <string name="family_text_yong">用</string>
     <string name="family_text_dian">电</string>
     <string name="family_text_liang">量</string>
     <string name="family_text_ben">本</string>
     <string name="family_text_shi_">实</string>
     <string name="family_text_shi">时</string>
     <string name="family_text_gong">功</string>
     <string name="family_text_lv">率</string>
     <string name="family_text_watt">瓦</string>
     <string name="family_text_on">开</string>
     <string name="family_text_stop">停</string>
     <string name="family_text_off">关</string>
     <string name="family_text_refresh">刷新</string>
    <string name="str_index">序号</string>
    <string name="str_business_name">营业厅名称</string>
    <string name="str_phone">电话</string>
    <string name="str_business_address">营业厅地址</string>
    <string name="str_worktime">营业时间</string>
	<string name="btn_webbrowser">浏览器</string>
	<string name="text_advanced_settings">高级设置</string>
	<string name="text_filebrowser">文件浏览器</string>
	<string name="text_factorytest">厂测程序</string>
</resources>