<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gd_mypower_bill_listitem_selecter"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/index"
        android:layout_width="80dp"
        android:layout_height="43dp"
        android:gravity="center"
        android:text="@string/str_index"
        android:textColor="#ffffff"
        android:textSize="@dimen/gl_text_size_20sp" />

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/str_business_name"
        android:textColor="#ffffff"
        android:textSize="@dimen/gl_text_size_20sp" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/str_phone"
        android:textColor="#ffffff"
        android:textSize="@dimen/gl_text_size_20sp" />

    <TextView
        android:id="@+id/address"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginLeft="10dp"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/str_business_address"
        android:textColor="#ffffff"
        android:textSize="@dimen/gl_text_size_20sp" />

    <TextView
        android:id="@+id/time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/str_worktime"
        android:textColor="#ffffff"
        android:textSize="@dimen/gl_text_size_20sp" />

</LinearLayout>