<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="200dp"
        android:orientation="vertical">"

        <Button
            android:id="@+id/btn_webbrowser"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/btn_webbrowser" />

        <Button
            android:id="@+id/btn_settings"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/text_advanced_settings" />

        <Button
            android:id="@+id/btn_filebrowser"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/text_filebrowser" />

        <Button
            android:id="@+id/btn_factorytest"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/text_factorytest" />
    </LinearLayout>

</RelativeLayout>