<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/smarthome_model_ele_nomarl"
    android:descendantFocusability="afterDescendants"
     >
    <LinearLayout 
        android:layout_width="189dp"
        android:layout_height="289dp"
        android:orientation="vertical"
        >
    <TextView
        android:id="@+id/ele_title"
        android:layout_width="189dp"
        android:layout_height="31dp"
        android:layout_gravity="center"
        android:gravity="center"
        />

    <ImageView
        android:id="@+id/smarthome_bottom_device_pic"
        android:layout_width="189dp"
        android:layout_height="75dp"
        android:layout_marginTop="10dp"
        android:scaleType="fitCenter"
         />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/family_text_on"
            android:textColor="#fff" />

        <Button
            android:id="@+id/smart_home_light_switch"
            android:layout_width="82dp"
            android:layout_height="31dp"
            android:layout_marginLeft="5dp"
            android:focusable="true"
            android:background="@drawable/smart_home_on_off_on_selecter"
             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/family_text_off"
            android:textColor="#fff" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="189dp"
        android:layout_height="22dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:paddingRight="15dp"
        android:paddingLeft="15dp" >

        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/family_text_jin"
                android:textColor="#fff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ch_day"
                android:textColor="#fff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/family_text_yong"
                android:textColor="#fff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/family_text_dian"
                android:textColor="#fff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/family_text_liang"
                android:textColor="#fff" />
        </LinearLayout>

        <TextView
            android:id="@+id/smarthome_ele_day_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:gravity="left"
            android:textColor="#fff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/string_degree"
            android:textColor="#fff" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="189dp"
        android:layout_height="22dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingRight="15dp"
        android:paddingLeft="15dp" >

        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/family_text_ben"
                android:textColor="#fff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ch_month"
                android:textColor="#fff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/family_text_yong"
                android:textColor="#fff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/family_text_dian"
                android:textColor="#fff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/family_text_liang"
                android:textColor="#fff" />
        </LinearLayout>

        <TextView
            android:id="@+id/smarthome_ele_month_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:gravity="left"
            android:textColor="#fff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/string_degree"
            android:textColor="#fff" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="189dp"
        android:layout_height="22dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingRight="15dp"
        android:visibility="invisible"
        android:paddingLeft="15dp" >

        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/family_text_shi_"
                android:textColor="#fff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/family_text_shi"
                android:textColor="#fff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/family_text_gong"
                android:textColor="#fff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/family_text_lv"
                android:textColor="#fff" />
        </LinearLayout>

        <TextView
            android:id="@+id/smarthome_ele_reatime_power"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="left"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textColor="#fff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/family_text_watt"
            android:textColor="#fff" />
    </LinearLayout>
    <LinearLayout 
        android:visibility="invisible"
          android:layout_width="189dp"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:gravity="bottom"
        >
     <Button
         android:id="@+id/smart_home_refresh" 
	     android:layout_width="68dp"
	     android:layout_height="28dp"
	     android:background="@drawable/smart_home_equ_refresh_selecter"
	     android:text="@string/family_text_refresh"
	     android:textSize="12sp"
	     android:layout_marginLeft="64dp"
	     android:layout_marginBottom="5dp"
     />
     </LinearLayout>
</LinearLayout>


</RelativeLayout>