<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/mail_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/email_id"
                android:textColor="#000000"
                android:textSize="@dimen/gl_text_size_18sp" />

            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/email_date"
                android:textColor="#000000"
                android:textSize="@dimen/gl_text_size_18sp" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/email_flag"
                android:textColor="#000000"
                android:textSize="@dimen/gl_text_size_18sp" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/email_title"
                android:textColor="#000000"
                android:textSize="@dimen/gl_text_size_18sp" />
        </LinearLayout>

        <ListView
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:cacheColorHint="@android:color/transparent"
            android:clipToPadding="false"
            android:divider="#00000000"
            android:dividerHeight="4dp"
            android:drawSelectorOnTop="false"
            android:listPreferredItemHeight="48dp"
            android:listSelector="#00000000"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbarStyle="outsideOverlay" />
    </LinearLayout>

    <TextView
        android:id="@+id/mail_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
 		android:layout_marginRight="20dp"
 		android:layout_marginBottom="20dp"
        android:scrollbars="vertical"
        android:textColor="#000000"
        android:textSize="@dimen/gl_text_size_18sp"
        android:visibility="gone" />

</FrameLayout>